# igf_toolbox

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation-ci.yml
api/AddConstante/: index.html
api/AddFixedEffect/: index.html
api/AddInteraction/: index.html
api/ClusteringTransformer/: index.html
api/ColumnExcluder/: index.html
api/ForestOutliersIsolation/: index.html
api/FrozenDict/: index.html
api/LeastSquaresEstimator/: index.html
api/LogTransformer/: index.html
api/LogitClassifier/: index.html
api/OaxacaBlinder/: index.html
api/OneHotEncoder/: index.html
api/PanelLeastSquaresEstimator/: index.html
api/PrimarySecretStatController/: index.html
api/ProbitClassifier/: index.html
api/QuantileExcluder/: index.html
api/S3Loader/: index.html
api/S3Saver/: index.html
api/SecondarySecretStatController/: index.html
api/SecretStatEstimator/: index.html
api/StandardScalerTransformer/: index.html
api/StatDesGroupBy/: index.html
api/ThresholdExcluder/: index.html
api/_S3Connection/: index.html
api/_assign_quantile_array/: index.html
api/_fit_and_predict/: index.html
api/_init_logger/: index.html
api/_separate_category_modality_from_dummy/: index.html
api/_sort_index_with_total/: index.html
api/_sort_level_with_total/: index.html
api/_weighted_quantile_array/: index.html
api/apply_stars/: index.html
api/assign_quantile/: index.html
docs/: index.md
igf_toolbox/: __init__.py
search/: search_index.json
(+81 files in other folders)
